Final CORS configuration for Vercel frontend